name:               alunduil-blog
version:            0.2.0.0
build-type:         Simple
cabal-version:      >= 1.10
tested-with:        GHC == 8.0.*

extra-source-files:
    css/*.css
  , images/*.png
  , posts/*.rst
  , README.md
  , templates/*.html

executable site
  default-language: Haskell2010
  main-is:          site.hs

  ghc-options:      -threaded

  build-depends:
      base   == 4.*
    , hakyll == 4.9.*
