name:               blog-alunduil-com
version:            0.2.0.0
synopsis:           Personal Blog

-- description:

homepage:           http://blog.alunduil.com
bug-reports:        https://github.com/alunduil/blog.alunduil.com/issues
author:             Alex Brandt
maintainer:         alunduil@alunduil.com
copyright:          (c) 2018 Alex Brandt
category:           Web
build-type:         Simple
cabal-version:      >= 1.10
tested-with:        GHC == 8.6.*

extra-source-files:
    css/*.css
  , images/*.png
  , posts/*.rst
  , README.md
  , templates/*.html

source-repository head
  type:     git
  location: https://github.com/alunduil/blog.alunduil.com.git

executable site
  default-language: Haskell2010
  main-is:          site.hs

  ghc-options:      -threaded

  build-depends:
      base   == 4.*
    , hakyll >= 4.9 && < 4.13
